# Project-Ivan

./: CMakeLists.txt  README.md  sdkconfig
components/display/: st7789v2_driver.c
components/imu/: qmi8658_driver.c
components/lvgl/: lvgl_component.c
docs/: design_notes.md  planning_log.md
main/: CMakeLists.txt  app_main.c
